--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport"content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#ff5722">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>Tournaments</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <meta name="theme-color" content="#ff5722">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <title>Tournaments</title>
+</head>
+
+<body style="font-family: 'Roboto', sans-serif; color:aliceblue;">
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="app"></div>
+</body>
+
 </html>
