--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="theme-color" content="#ff5722">
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <meta name="theme-color" content="#ff5722">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
   <title>Tournaments</title>
 </head>
 
